fix wrap on <pre>

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -7,4 +7,8 @@
     font-family: Seravek, "Gill Sans Nova", Ubuntu, Calibri, "DejaVu Sans",
       source-sans-pro, sans-serif;
   }
+
+  pre {
+    white-space: pre-wrap;
+  }
 }
